--- a/build.gradle
+++ b/build.gradle
@@ -612,7 +612,10 @@ subprojects {
             if (isJava8) {
                 jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
             }
-            jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005'
+//            println classpath.asPath
+//            systemProperties += ["emit.test.debug": 'true']
+
+//            jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005'
 
             testLogging {
                 showStandardStreams = true
