--- a/build.gradle
+++ b/build.gradle
@@ -619,6 +619,8 @@ subprojects {
 //            systemProperties += ["emit.test.debug": 'true']
 
 //            jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005'
+            jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
+            jvmArgs '-XX:HeapDumpPath=/Users/smillst/tmp/dump/'
 
             testLogging {
                 showStandardStreams = true
