--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,9 @@ allprojects {
                     "-Xlint:-options",
                     "-Xlint",
             ]
-            if (!isJava8) {
+            if (isJava8) {
+                options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}"]
+            } else {
                 options.compilerArgs += [
                     "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                     "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
@@ -153,9 +155,7 @@ allprojects {
             }
             options.encoding = 'UTF-8'
             options.fork = true
-            if (isJava8) {
-                options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}"]
-            }
+
             // Don't use error-prone by default
             options.errorprone.enabled = false
         }
@@ -586,20 +586,20 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
-            if (javaVersion == JavaVersion.VERSION_11){
-                forkEvery(1)
-            }
-            if (!isJava8) {
-                jvmArgs += [
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
+            } else {
+                    forkEvery(1)
+                    jvmArgs += [
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                            "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                     ]
             }
 
@@ -612,9 +612,7 @@ subprojects {
                 systemProperties += ["emit.test.debug": 'true']
             }
 
-            if (isJava8) {
-                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
-            }
+
 //            println classpath.asPath
 //            systemProperties += ["emit.test.debug": 'true']
 
