--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -44,7 +44,7 @@ task checkDependencies() {
 compileJava.dependsOn(checkDependencies)
 
 task allSourcesJar(type: Jar) {
-    description 'Creates a sources jar that includes sources for all Checker Framework classes in framewFork.jar'
+    description 'Creates a sources jar that includes sources for all Checker Framework classes in framework.jar'
     destinationDirectory = file("${projectDir}/dist")
     archiveFileName = "framework-source.jar"
     from (project(':framework').sourceSets.main.java,
