--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ env:
 # The "docker run" command will pull if needed.
 # Running this first gives two tries in case of network lossage.
 before_script:
-- timeout 5m docker pull charleszhuochen/$OS-for-cfi-$JDKVER || true
+- timeout 5m docker pull xingweitian/$OS-for-cfi-$JDKVER || true
 - timeout 5m docker pull mdernst/cf-$OS-$JDKVER || true
 
 # Using travis_wait here seems to cause the job to terminate after 1 minute
@@ -58,7 +58,7 @@ script:
   if [ $JDKVER = jdk8-plus ] ; then
     DOCKERIMAGE=mdernst/cf-$OS-$JDKVER
   else
-    DOCKERIMAGE=charleszhuochen/$OS-for-cfi-$JDKVER
+    DOCKERIMAGE=xingweitian/$OS-for-cfi-$JDKVER
   fi &&
   docker run -v $HOME/.gradle:/root/.gradle -v $HOME/.m2:/root/.m2 $DOCKERIMAGE /bin/bash -c "true &&
      if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
