--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ env:
     - BUILDJDK=downloadjdk JDKVER=jdk8-plus GROUP=misc
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=checker-framework-inference
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=plume-lib
-    - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=plume-lib
+    # TODO: enable once Gradle plugin works with Java 11.
+    # - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=plume-lib
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=downstream
     - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=downstream
 
