--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,15 +71,15 @@ jobs:
     fetchDepth: 25
   - bash: ./checker/bin-devel/test-daikon.sh
     displayName: test-daikon.sh
-- job: daikon_jdk11
-  pool:
-    vmImage: 'ubuntu-16.04'
-  container: mdernst/cf-ubuntu-jdk11:latest
-  steps:
-  - checkout: self
-    fetchDepth: 25
-  - bash: ./checker/bin-devel/test-daikon.sh
-    displayName: test-daikon.sh
+#- job: daikon_jdk11
+#  pool:
+#    vmImage: 'ubuntu-16.04'
+#  container: mdernst/cf-ubuntu-jdk11:latest
+#  steps:
+#  - checkout: self
+#    fetchDepth: 25
+#  - bash: ./checker/bin-devel/test-daikon.sh
+#    displayName: test-daikon.sh
 - job: downstream_jdk11
   pool:
     vmImage: 'ubuntu-16.04'
