--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,16 @@ env:
     - OS=ubuntu
   matrix:
     # "framework-tests" are a subset of all-tests that do not require an annotated jdk 11.
-    - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=framework-tests
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=all-tests
+    - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=all-tests
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=jdk.jar
     - BUILDJDK=downloadjdk JDKVER=jdk8-plus GROUP=misc
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=checker-framework-inference
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=plume-lib
+    # TODO: enable once Gradle plugin works with Java 11.
+    # - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=plume-lib
     - BUILDJDK=downloadjdk JDKVER=jdk8 GROUP=downstream
+    - BUILDJDK=downloadjdk JDKVER=jdk11 GROUP=downstream
 
 # The "docker run" command will pull if needed.
 # Running this first gives two tries in case of network lossage.
