--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,15 @@ jobs:
     fetchDepth: 25
   - bash: ./checker/bin-devel/test-misc.sh
     displayName: test-misc.sh
+- job: misc_jdk11
+  pool:
+    vmImage: 'ubuntu-16.04'
+  container: mdernst/cf-ubuntu-jdk11-plus:latest
+  steps:
+  - checkout: self
+    fetchDepth: 25
+  - bash: ./checker/bin-devel/test-misc.sh
+    displayName: test-misc.sh
 - job: cf_inference_jdk8
   pool:
     vmImage: 'ubuntu-16.04'
