--- a/build.gradle
+++ b/build.gradle
@@ -693,7 +693,7 @@ subprojects {
             ]
         }
 
-        // Create an allTests task
+        // Create an allTests task per project
         tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests'
             tasks = ['test', 'checkPurity']
