Revert "Enable plume-lib JDK 11 tests."
This reverts commit 1c76821136877d08842b7f12ffd7a236d778aff7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ env:
     - GROUP=misc JDKVER=jdk11-plus BUILDJDK=downloadjdk
     - GROUP=checker-framework-inference JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
+    # TODO: enable once Gradle plugin works with Java 11.
+    # - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk11 BUILDJDK=downloadjdk
 
