--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,15 +53,15 @@ jobs:
     fetchDepth: 25
   - bash: ./checker/bin-devel/test-cf-inference.sh
     displayName: test-cf-inference.sh
-- job: plume_lib_jdk11
-  pool:
-    vmImage: 'ubuntu-16.04'
-  container: mdernst/cf-ubuntu-jdk11:latest
-  steps:
-  - checkout: self
-    fetchDepth: 25
-  - bash: ./checker/bin-devel/test-plume-lib.sh
-    displayName: test-plume-lib.sh
+# - job: plume_lib_jdk11
+#   pool:
+#     vmImage: 'ubuntu-16.04'
+#   container: mdernst/cf-ubuntu-jdk11:latest
+#  steps:
+#  - checkout: self
+#    fetchDepth: 25
+#  - bash: ./checker/bin-devel/test-plume-lib.sh
+#    displayName: test-plume-lib.sh
 - job: plume_lib_jdk8
   pool:
     vmImage: 'ubuntu-16.04'
