--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ env:
     - THIS_REPO=checker-framework
     - OS=ubuntu
   matrix:
-    # "framework-tests" are a subset of all-tests that do not require an annotated jdk 11.
     - GROUP=all-tests JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=all-tests JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=jdk.jar JDKVER=jdk8 BUILDJDK=downloadjdk
@@ -26,8 +25,7 @@ env:
     - GROUP=misc JDKVER=jdk11-plus BUILDJDK=downloadjdk
     - GROUP=checker-framework-inference JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=plume-lib JDKVER=jdk8 BUILDJDK=downloadjdk
-    # TODO: enable once Gradle plugin works with Java 11.
-    # - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=plume-lib JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=downstream JDKVER=jdk11 BUILDJDK=downloadjdk
 
