--- a/build.gradle
+++ b/build.gradle
@@ -203,6 +203,7 @@ task version() {
  * @param projectName name of the project
  * @param checker full qualified name of the checker to run
  * @param shortName shorter version of the checker to use to name the task.
+ * @param args list of arguments to pass to the checker
  */
 def createCheckTypeTask(projectName, checker, shortName, args) {
     project("${projectName}").tasks.create(name: "check${shortName}", type: JavaCompile, dependsOn: ':checker:shadowJar') {
