Fix Javadoc errors

--- a/build.gradle
+++ b/build.gradle
@@ -114,11 +114,14 @@ allprojects {
                 options.taglets 'org.checkerframework.taglet.ManualTaglet'
                 options.tagletPath(project(':framework-test').sourceSets."${tagletVersion}".output.classesDirs.getFiles() as File[])
                 // TODO: this doesn't work with JDK 11
-                options.links = isJava8 ? ['https://docs.oracle.com/en/java/javase/11/docs/api/', 'https://docs.oracle.com/en/java/javase/11/docs/jdk/api/javac/tree/'] : []
+                options.links = isJava8 ? ['https://docs.oracle.com/javase/8/docs/api/', 'https://docs.oracle.com/javase/8/docs/jdk/api/javac/tree/'] : []
                 // This file is looked for by Javadoc.
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
                 options.addStringOption('source', '8')
+                if (JavaVersion.current().isJava8Compatible()) {
+                    options.addStringOption('Xwerror', '-quiet')
+               }
             }
         }
 
