--- a/build.gradle
+++ b/build.gradle
@@ -727,14 +727,14 @@ subprojects {
             if (project.name.is('checker')) {
                 tasks += ['nullnessExtraTests', 'commandLineTests', 'tutorialTests']
             } else {
-                task += ['test']
+                tasks += ['test']
             }
         }
 
         // Create an allTests task per project
         tasks.create(name: 'allTests', type: GradleBuild, group: 'Verification') {
             description 'Run all Checker Framework tests'
-            tasks = ['allTestsButJunit']
+            tasks = ['allTestsButCheckerJunit']
             if (project.name.is('checker')) {
                 tasks += ['test']
             }
