--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ env:
     - OS=ubuntu
   matrix:
     - GROUP=all-tests JDKVER=jdk8 BUILDJDK=downloadjdk
-    - GROUP=junit JDKVER=jdk11 BUILDJDK=downloadjdk
-    - GROUP=all-tests-but-junit JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=junit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
+    - GROUP=nonjunit-tests JDKVER=jdk11 BUILDJDK=downloadjdk
     - GROUP=jdk.jar JDKVER=jdk8 BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk8-plus BUILDJDK=downloadjdk
     - GROUP=misc JDKVER=jdk11-plus BUILDJDK=downloadjdk
